--- a/_config.yml
+++ b/_config.yml
@@ -20,15 +20,15 @@ enable_smart_app_banner                   : true                                
 
 
 # Information About Yourself
-your_name                                 : Nicolaus Gorka                                
+your_name                                 :                                 
 your_link                                 :                     
 your_city                                 :                                 
 email_address                             : 
 facebook_username                         :                                           
-instagram_username                        : daily20
-twitter_username                          : daily20
+instagram_username                        : daily20app
+twitter_username                          : daily20app
 github_username                           : 
-youtube_username                          :
+youtube_username                          : daily20app
 
 
 
